--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,14 @@ input[type="submit"],ul.address li ul.address-text li a,.agile_about_blog_right_
 	-ms-transition: .5s ease-in;
 }
 .banner_body{
-	padding:3em 0 4em;
+	/*padding:3em 0 4em;*/
 }
 .w3ls_logo_nav_right {
     position: relative;
 }
 .w3ls_logo_nav_left h1 a{
 	font-size:1.5em;
-	color:#fff;
+	color:#949090;
 	text-decoration:none;
 }
 /*-- Tabs --*/
@@ -81,8 +81,10 @@ input[type="submit"],ul.address li ul.address-text li a,.agile_about_blog_right_
     width: 16%;
     padding:2em 0 0;
     text-transform: uppercase;
-    color: #fff;
+    color: #949090;
     text-align: center;
+	font:  18px "Microsoft YaHei";
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
 }
 
 .resp-tab-item li:last-child{
@@ -106,7 +108,7 @@ h2.resp-accordion {
 
 .resp-tab-content {
 	display: none;
-	padding: 5em 0 0;
+	padding: 2em 0 0;
 }
 
 .resp-content-active, .resp-accordion-active {
@@ -114,7 +116,9 @@ h2.resp-accordion {
 }
 /*-- //Tabs --*/
 .wthree_tab_content img {
-    margin-left:10em;
+    margin-left:20em;
+	border-radius: 10px;
+	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.45);
 }
 .wthree_tab_content{
 	position:relative;
@@ -163,7 +167,8 @@ h2.resp-accordion {
     left:-22%;
     width: 60%;
     padding: 1.5em;
-    background: #23D6E7;
+	border-radius: 10px;
+	background: rgba(75, 193, 230, .9)
 }
 .wthree_tab_content_pos_grid{
 	padding: 1.5em;
@@ -176,6 +181,7 @@ h2.resp-accordion {
     display: inline-block;
     padding: .5em 1.5em;
     position: relative;
+	border-radius: 10px
 }
 .wthree_tab_content_pos_grid h2:before {
     width: 0;
@@ -211,23 +217,23 @@ ul.address li ul.address-text li:nth-child(1) {
 }
 ul.address li ul.address-text li {
     display: inline-block;
-    color: #fff;
+    color: #000;
     margin-top: 1em;
     font-weight: 100;
 }
 ul.address li ul.address-text li a {
-    color: #fff;
+    color: #000;
     text-decoration: none;
 }
 ul.address li ul.address-text li a:hover{
-    color: #212121;
+    color: #26f310;
 }
 .agileits_copyright{
-	margin:4em 0 0;
+	margin:2em 0;
 	text-align:center;
 }
 .agileits_copyright p{
-	color:#fff;
+	color:#000;
 	line-height:1.8em;
 	font-size:1em;
 }
@@ -268,9 +274,9 @@ ul.address li ul.address-text li a:hover{
 	content: '';
     position: absolute;
     bottom: 0;
-    left: 40%;
+    left: 37%;
     border-bottom: 4px double #23D6E7;
-    width: 20%;
+    width: 27%;
 }
 .agileits_agile_about_left p{
 	color:#999;
@@ -298,6 +304,7 @@ ul.address li ul.address-text li a:hover{
     margin: 1em 0 0;
     height: 20px;
     background: #EBEBEB;
+	border-radius: 6px;
 }
 .skills,.skills1,.skills2,.skills3,.skills4{
 	position:relative;
@@ -315,7 +322,8 @@ ul.address li ul.address-text li a:hover{
 .skill1,.skill3,.skill4,.skill5 {
 	height: 100%;
 	display: block;
-	background-color:#F1DE00;
+	background-color:#0dd408;
+	border-radius: 6px;
 }
 .agileits_skills_grids{
 	margin:1em 0 0;
@@ -330,7 +338,7 @@ ul.address li ul.address-text li a:hover{
 	right:5%;
 	width:100px;
 	height:100px;
-	background:#23D6E7;
+	background: rgba(75, 193, 230, .7)
 }
 .agile_about_blog_left_grid_pos ul li{
 	display: block;
@@ -362,9 +370,9 @@ ul.address li ul.address-text li a:hover{
 	outline:none;
 }
 .modal-body p {
-    margin: 2em 1em 1em;
+    margin: 1em 1em;
     line-height: 2em;
-    color: #999;
+    color: #000;
 }
 .modal-body p i{
 	color:#212121;
@@ -407,10 +415,15 @@ ul.address li ul.address-text li a:hover{
 	line-height:2em;
 }
 .agile_model {
-    margin: 3em 0 0;
+    margin: 2em 0 0;
 }
+
+.agileits_agile_about_blog {
+	margin-bottom: 30px;
+}
+
 .agileits_agile_about_blog:nth-child(3){
-	margin:2em 0 0;
+	/*margin:2em 0 0;*/
 }
 /*-- portfolio --*/
 .agileits_agile_about_portfolio1 {
@@ -465,19 +478,36 @@ ul.address li ul.address-text li a:hover{
 	display: inline-block;
 }
 /*-- contact --*/
-.agileits_agile_about_mail input[type="text"],.agileits_agile_about_mail input[type="email"],.agileits_agile_about_mail textarea{
+.agileits_agile_about_mail label {
+	height: 42px;
+	font: normal 18px/42px "Microsoft YaHei";
+	padding: 0;
+}
+
+.agileits_agile_about_mail .labelMsg{
+	margin-left: 1em;
+}
+
+.agileits_agile_about_mail input[type="text"],.agileits_agile_about_mail input[type="email"],.agileits_agile_about_mail #message{
 	outline: none;
     background: #FCFCFC;
     border:1px solid #DDDDDD;
     padding: 10px;
     font-size: 14px;
     color: #999;
-    width: 100%;
+    /*width: 100%;*/
 }
+
+.agileits_agile_about_mail #message {
+	margin: 1em;
+	margin-top: 0;
+}
+
 .agileits_agile_about_mail textarea{
 	min-height: 200px;
     margin: 1em 0 1em 1.1em;
     width: 95.9% !important;
+	margin-top: 0;
 }
 .agileits_agile_about_mail input[type="submit"]{
 	outline: none;
@@ -495,7 +525,7 @@ ul.address li ul.address-text li a:hover{
 	color:#212121;
 }
 .agileits_agile_about_mail input[type="email"],.agileits_agile_about_mail input[type="text"]:nth-child(1){
-	margin-bottom:1em;
+	/*margin-bottom:1em;*/
 }
 .w3agile_map{
 	position:relative;
@@ -633,6 +663,7 @@ ul.address li ul.address-text li a:hover{
 	}
 	.wthree_tab_content_pos {
 		top: -5%;
+		border-radius: 10px
 	}
 	.wthree_tab_content_pos1 {
 		right: -20%;
@@ -1039,4 +1070,8 @@ ul.address li ul.address-text li a:hover{
 	.w3ls_logo_nav_left h1 a {
 		font-size: .9em;
 	}
+}
+
+.indent{
+	text-indent: 2em;
 }
